@@ -17,10 +17,20 @@ dependencies {
     implementation group: 'org.apache.lucene', name: 'lucene-core', version: '10.0.0-SNAPSHOT'
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
+}
+
+compileJava {
+    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
+}
+compileTestJava {
+    options.compilerArgs += ['--add-modules', 'jdk.incubator.vector']
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs '--add-modules=jdk.incubator.vector'
 }
 
 task runSimple(type: JavaExec) {
